--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.0.20
   permission_handler: ^10.2.0
   contacts_service: ^0.6.3
+  sqflite: ^2.2.6
   
 dev_dependencies:
   flutter_test:
