--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   background_sms: ^0.0.4
   geolocator: ^9.0.2
   geocoding: ^2.1.0
+  get: ^4.6.5
   
 dev_dependencies:
   flutter_test:
